# Balls

./: .gitmodules  Balls.sln  CMakeLists.txt  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  balls.desktop  build.rs  info.rc
Balls/: Balls.rc  Balls.vcxproj  Balls.vcxproj.filters  CMakeLists.txt  app.manifest  balls.cpp  balls.h  loopvar.h  main.cpp  mainwnd.cpp  mainwnd.h  observable.h  pch.h  resource.h  serialstream.h
Balls/balls/: CMakeLists.txt
Balls/balls/include/balls/: main_window.h
Balls/balls/res/: info.rc.in
Balls/balls/src/: main.cpp  main_window.cpp
Balls/balls_lib/: CMakeLists.txt
Balls/balls_lib/include/balls/: balls.h
Balls/balls_lib/src/: balls.cpp
Balls/include/: balls.h  balls.hpp  loopvar.hpp  mainwnd.h  observable.h  serialstream.hpp
Balls/res/: logo.icns  logo.rc
Balls/src/: balls.cpp  main.cpp  main_window.cpp
macbundle/: Info.plist  bundle.sh
src/: lib.rs  main.rs
