cmake_minimum_required(VERSION 3.14)
project(Balls VERSION 2.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)

set(BUILD_SHARED_LIBS OFF)
set(XAML_INSTALL OFF)
set(BUILD_WEBVIEW OFF)
set(BUILD_CONTROLS OFF)
set(BUILD_CMDLINE OFF)
set(BUILD_PARSER OFF)
set(BUILD_DETECTOR OFF)
set(BUILD_RESOURCE_COMPILER OFF)

include(XamlCpp/cmake/Modules/XamlCompilerHelper.cmake)
xaml_check_ipo()

add_subdirectory(XamlCpp)
add_subdirectory(Balls)
