[package]
name = "balls"
version = "3.0.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.6.0", features = ["std"] }
compio = { version = "0.12.0", features = ["macros", "nightly", "time"] }
euclid = "0.22.11"
futures-channel = "0.3.30"
futures-util = "0.3.30"
paste = "1.0.15"
rand = { version = "0.8.5", features = ["nightly"] }
rand_distr = "0.4.3"
winio = { version = "0.1.5", features = ["nightly"] }

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.winres]
FileDescription = "二维弹球"
LegalCopyright = "Copyright (c) 2018-2024 Berrysoft"
