[package]
name = "balls"
version = "3.0.2"
edition = "2021"
description = "二维弹球"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
license = "MIT"
repository = "https://github.com/Berrysoft/Balls"

[dependencies]
bitflags = { version = "2.6.0", features = ["std"] }
compio = { version = "0.12.0", features = [
    "macros",
    "nightly",
    "time",
    "bytes",
] }
futures-util = "0.3.30"
paste = "1.0.15"
rand = { version = "0.8.5", features = ["nightly"] }
rand_distr = "0.4.3"
winio = { version = "0.1.6", features = ["nightly"] }

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.winres]
FileDescription = "二维弹球"
LegalCopyright = "Copyright (c) 2018-2024 Berrysoft"

[package.metadata.deb]
assets = [
    [
        "target/release/balls",
        "usr/bin/",
        "755",
    ],
    [
        "logo.png",
        "usr/share/icons/hicolor/256x256/apps/balls.png",
        "644",
    ],
    [
        "balls.desktop",
        "usr/share/applications/balls.desktop",
        "755",
    ],
]

[patch.'crates-io']
winio = { path = "../winio" }
