[package]
name = "balls"
version = "3.2.4"
edition = "2021"
description = "二维弹球"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
license = "MIT"
repository = "https://github.com/Berrysoft/Balls"

[dependencies]
bitflags = { version = "2.6.0", features = ["std"] }
compio = { version = "0.14.0", features = [
    "macros",
    "nightly",
    "time",
    "bytes",
] }
compio-driver = { version = "0.7.1", features = ["iocp-wait-packet"] }
futures-util = "0.3.30"
rand = { version = "0.9.0", features = ["nightly"] }
rand_distr = "0.5.1"
winio = { version = "0.5.1", default-features = false, features = ["nightly", "windows-dark-mode"] }

[build-dependencies]
winres = "0.1.12"

[features]
default = ["qt"]
qt = ["winio/qt"]
gtk = ["winio/gtk"]

objc-static = ["winio/objc-static"]
clang-lto = ["winio/clang-lto"]
vc-ltl = []

[profile.release]
lto = true
codegen-units = 1

[package.metadata.winres]
FileDescription = "二维弹球"
LegalCopyright = "Copyright (c) 2018-2024 Berrysoft"

[package.metadata.deb]
assets = [
    [
        "target/release/balls",
        "usr/bin/",
        "755",
    ],
    [
        "logo.png",
        "usr/share/icons/hicolor/256x256/apps/balls.png",
        "644",
    ],
    [
        "balls.desktop",
        "usr/share/applications/balls.desktop",
        "755",
    ],
]
